# signal-editor-v2

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  signal-editor-v2.code-workspace  sitemap.xml
about/license/: index.html
about/references/: index.html
docs/: about.md  filters_and_standardization.md  index.md  references.md
docs/about/: license.md  references.md
docs/ui_components/: menu_bar.md  pages.md  section_list.md  tool_bar.md
docs/user_guide/: configuration.md  loading_data.md  signal_preprocessing.md
search/: search_index.json
signal_editor/: se_app.py  signal_editor.py  type_defs.py
signal_editor/app/: _app_config.py  _type_defs.py  config.py  const_defs.py  constants.py  enum_defs.py  models.py  signal_editor.py  type_defs.py  utils.py
signal_editor/app/controllers/: __init__.py  config_controller.py  config_controller2.py  data_controller.py  plot_controller.py  section_controller.py
signal_editor/app/core/: analysis.py  file_io.py  file_readers.py  file_writers.py  peak_detection.py  processing.py  section.py
signal_editor/app/gui/: __init__.py  dialogs.py  docks.py  flow_layout.py  graphic_items.py  icons.py  main_window.py  style_sheets.py
signal_editor/app/gui/dialogs/: __init__.py  config_dialog.py  export_dialog.py  metadata_dialog.py  settings_dialog.py
signal_editor/app/gui/docks_dialogs/: __init__.py  log_dock.py  metadata_dialog.py  method_parameters_dock.py
signal_editor/app/gui/plot_items/: __init__.py  clickable_region_item.py  editing_view_box.py  plot_data_item.py  scatter_plot_item.py  time_axis_item.py
signal_editor/app/gui/widgets/: __init__.py  _qt_type_checker.py  _widget_defaults.py  collapsible_frame.py  config_tree.py  data_tree_widget.py  enum_combo_box.py  export_dialog.py  grouped_combo_box.py  jupyter_console.py  jupyter_console_widget.py  log_msg_viewer.py  log_viewer.py  log_window.py  message_box.py  metadata_dialog.py  overlay_widget.py  parameter_inputs.py  peak_detection_inputs.py  processing_inputs.py  section_list.py  settings_dialog.py  settings_editor.py
signal_editor/app/logic/: file_io.py  metadata.py  peak_detection.py  processing.py  section.py
signal_editor/app/models/: __init__.py  config_model.py  config_tree_model.py  data_frame_model.py  data_model.py  data_table.py  df_model.py  enum_model.py  file_list_model.py  metadata.py  result_models.py  section_container.py  section_list_model.py  settings_model.py
signal_editor/resources/: resources.qrc
signal_editor/ui/: dialog_export_result.ui  dialog_metadata.ui  dock_peak_detection.ui  dock_processing_inputs.ui  dock_session_properties.ui  dock_status_log.ui  main_window.ui  overlay_widget.ui  parameter_inputs.ui  resources_rc.py  tab_widget_settings.ui  ui_dialog_export_result.py  ui_dialog_metadata.py  ui_dock_peak_detection.py  ui_dock_processing_input.py  ui_dock_session_properties.py  ui_dock_status_log.py  ui_main_window.py  ui_overlay_widget.py  ui_parameter_inputs.py  ui_tab_widget_settings.py
ui_components/log_window/: index.html
ui_components/menu_bar/: index.html
ui_components/pages/: index.html
ui_components/parameter_inputs/: index.html
ui_components/section_list/: index.html
ui_components/status_log/: index.html
ui_components/tool_bar/: index.html
user_guide/configuration/: index.html
user_guide/exporting_results/: index.html
user_guide/introduction/: index.html
user_guide/loading_data/: index.html
user_guide/peak_detection/: index.html
user_guide/sections/: index.html
user_guide/signal_preprocessing/: index.html
