[project]
name = "signal-editor"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyarrow>=17.0.0",
    "wfdb>=4.1.2",
    "polars>=1.8.2",
    "mne>=1.8.0",
    "pywavelets>=1.7.0",
    "scipy>=1.14.1",
    "xlsxwriter>=3.2.0",
    "xlsx2csv>=0.8.3",
    "numexpr>=2.10.1",
    "numba>=0.60.0",
    "loguru>=0.7.2",
    "neurokit2>=0.2.10",
    "darkdetect>=0.8.0",
    "pyside6-fluent-widgets>=1.6.5",
    "attrs>=24.2.0",
    "ts2vg>=1.2.4",
    "tables>=3.10.1",
    "pyqtgraph",
    "stackprinter>=0.2.12",
    "pyside-config",
    "pyside-widgets",
    "rich[jupyter]>=13.8.1",
    "pyside6>=6.7.2",
    "numpy>=2.0.2",
    "pyopengl",
    "pyopengl_accelerate",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
    "pyinstaller>=6.10.0",
    "pyinstaller-hooks-contrib>=2024.8",
    "sourcery>=1.23.0",
    "ruff>=0.6.7",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
    "mkdocs-material>=9.5.37",
    "pyright>=1.1.382",
    "xmltodict>=0.13.0",
]

[tool.uv.sources]
pyqtgraph = { git = "https://github.com/pyqtgraph/pyqtgraph.git" }
pyside-config = { git = "https://github.com/fred-kr/pyside-config.git" }
pyside-widgets = { git = "https://github.com/fred-kr/pyside-widgets.git" }
pyopengl = { git = "https://github.com/mcfletch/pyopengl", tag = "release-3.1.8" }
pyopengl_accelerate = { git = "https://github.com/mcfletch/pyopengl", tag = "release-3.1.8", subdirectory = "accelerate" }

[tool.ruff]
target-version = "py312"
show-fixes = true
output-format = "concise"
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "B"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pyright]
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
