[project]
name = "signal-editor"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyarrow>=17.0.0",
    "wfdb>=4.1.2",
    "mne>=1.8.0",
    "pywavelets>=1.7.0",
    "scipy>=1.14.1",
    "numexpr>=2.10.1",
    "loguru>=0.7.2",
    "neurokit2>=0.2.10",
    "pyside6-fluent-widgets>=1.6.6",
    "attrs>=24.2.0",
    "ts2vg>=1.2.4",
    "tables>=3.10.1",
    "pyqtgraph",
    "pyside-config",
    "pyside-widgets",
    "pyside6==6.7.3",
    "numpy>=2.1.2",
    "pyopengl",
    "pyopengl_accelerate",
    "polars[excel]>=1.9.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.28.0",
    "sourcery>=1.23.0",
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "mkdocs-material>=9.5.40",
    "pyright>=1.1.384",
    "rich[jupyter]>=13.9.2",

]

[tool.uv.sources]
pyqtgraph = { git = "https://github.com/pyqtgraph/pyqtgraph.git" }
pyside-config = { git = "https://github.com/fred-kr/pyside-config.git" }
pyside-widgets = { git = "https://github.com/fred-kr/pyside-widgets.git" }
pyopengl = { git = "https://github.com/mcfletch/pyopengl", tag = "release-3.1.8" }
pyopengl_accelerate = { git = "https://github.com/mcfletch/pyopengl", tag = "release-3.1.8", subdirectory = "accelerate" }

[tool.ruff]
target-version = "py312"
show-fixes = true
output-format = "concise"
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "B"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pyright]
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownLambdaType = false
typeCheckingMode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
